fixed to center text on mobile

--- a/css/index/media.css
+++ b/css/index/media.css
@@ -164,12 +164,20 @@
 
 /* Small devices (landscape phones, less than 768px) */
 @media only screen and (max-width: 767.98px) { 
+    /* portfolio */
     .portfolio_container section {
         width: 100%;
     }
     .portfolio_container section:nth-child(2n+1) {
         float: none;
         margin-right: 0!important;
+    }
+    .portfolio_container h2 {
+        text-align: center;
+    }
+    .portfolio_container p {
+        text-align: center;
+        display: inline-block;
     }
     /* career-path */
     .career_container {
@@ -201,6 +209,9 @@
     .career_container .career_list ul li a {
         padding-left: 0;
     }
+    .career_container .career_list ul li a.selected {
+        text-decoration: underline;
+    }
     .career_container .career_list ul {
         margin-top: 70px;
     }
@@ -209,7 +220,29 @@
         padding-bottom: 74px;
     }
     .career_container .career_list h2 {
-        font-size: 31px;
+        font-size: 31px;    
+    }
+    .career_container .career_list ul li a.selected .chevron-right-icon {
+        display: none;
+    }
+    .career_container .career_description section h2 {
+        text-align: center;
+    }
+    .career_container .career_description section h4 {
+        text-align: center;
+    }
+    .career_container .career_description section h3 {
+        text-align: center;
+    }
+    .career_container .career_description section .tech_stack_list {
+        text-align: center;
+        display: block;
+    }
+    .career_container .career_list h2 {
+        text-align: center;
+    }
+    .career_container .career_list {
+        text-align: center;
     }
  }
 
